--- a/src/screens/ThanksTo.css
+++ b/src/screens/ThanksTo.css
@@ -17,6 +17,7 @@
 /* 스크롤바 스타일 */
 .scroll-view::-webkit-scrollbar {
     width: 8px;
+    height: 5px;
 }
 
 .scroll-view::-webkit-scrollbar-thumb {
